// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledSelect renders correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 7rem;
  margin-top: 3rem;
  margin-bottom: 1rem;
  padding: .5rem;
  font-size: 1rem;
  color: #3970a3;
  border-color: #9d9d9d;
}

.c0 > option {
  font-weight: bold;
}

<div>
  <select
    class="c0"
  />
</div>
`;

exports[`StyledSelect renders correctly with props 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 7rem;
  margin-top: 5rem;
  margin-bottom: 5rem;
  padding: .5rem;
  font-size: 1rem;
  color: #3970a3;
  border-color: #9d9d9d;
}

.c0 > option {
  font-weight: bold;
}

<div>
  <select
    class="c0"
  />
</div>
`;
